# iCub-torque-control

./: .gitignore  CMakeLists.txt  README.md
cmake/: iCubTorqueControlDependencies.cmake  iCubTorqueControlDependencyClassifier.cmake
code/cpp/: CMakeLists.txt
matlab/: estimate_joints_vel_acc.m  identify_friction.asv  identify_friction.m  identify_k_tau.m  identify_motor_model.m  load_data.asv  load_data.m  plot_curr_tau.asv  plot_curr_tau.m  plot_vel_tau.asv  plot_vel_tau.m  untitled.m  validate_joint_torque.m  validate_tau.m
matlab/ExperimentsDataset/: Info_Dataset.txt
matlab/KF/: initKF.m  kalmanfilter.m
matlab/ft_calibration/: calibrate_ft.m  compute_expected_contact_wrenches.m  compute_expected_ft_wrenches.m  compute_expected_ft_wrenches_fixed_base.m  compute_expected_ft_wrenches_floating_base.m  config_ft_calibration.m  main_ft_calibration.m  parse_robot_logger_device_data.m  parse_robot_logger_device_data_fts_from_wbd.m  progress_bar.m
matlab/motor_model_identification/: friction_model_identification.m  kbemf_list.mat  kckv_list.mat  ktau_given_friction_list.mat  ktau_identification.m  (+15 more)
src/: CMakeLists.txt
src/iCubFixedBaseTSID/: CMakeLists.txt
src/iCubFixedBaseTSID/config/robots/iCubGazeboV3/: iCub-fixedbaseTSID-options.ini  planner.ini  tsid.ini
src/iCubFixedBaseTSID/config/robots/iCubGenova09/: iCub-fixedbaseTSID-options.ini  planner.ini  tsid.ini
src/iCubFixedBaseTSID/include/iCub-torque-control/iCubFixedBaseTSID/: Module.h
src/iCubFixedBaseTSID/include/iCubFixedBaseTSID/: Module.h
src/iCubFixedBaseTSID/src/: Main.cpp  Module.cpp
(+164 files in other folders)
